--- a/docker_django/frontend/templates/frontend/index.html
+++ b/docker_django/frontend/templates/frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
-  <title>Cuaderno Manager</title>
+  <title>Deck Manager</title>
 </head>
 <body>
   <div id="app"></div>
